--- a/WebContent/project-page.html
+++ b/WebContent/project-page.html
@@ -120,7 +120,7 @@
 <!-- Page TItle -->
 <div class="page-title-main project-page">
 	<div class="container">
-    	<h1>Our Project</h1>
+    	<h1>QUAID I AZAM UNIVERSITY</h1>
         <ul class="breadcrumbs-ul container">
         	<li class="first-name">You are here:</li>
             <li><a href="#">Home</a></li>
