--- a/WebContent/contact-us.html
+++ b/WebContent/contact-us.html
@@ -197,7 +197,7 @@
             </div>
             <div class="footer-contact-detal">
             	<h2>Phone</h2>
-                <p>0203 475 7834</p>
+                <p>03159117594</p>
             </div>
             <div class="clearfix"></div>
         </div>
@@ -218,7 +218,7 @@
             </div>
             <div class="footer-contact-detal">
             	<h2>Email</h2>
-                <p>info@builder&amp;contractors.com</p>
+                <p>usmanali.itian@gmail.com</p>
             </div>
             <div class="clearfix"></div>
         </div>
