--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1238,7 +1238,7 @@
             </div>
             <div class="footer-contact-detal">
             	<h2>Phone</h2>
-                <p>0203 475 7834</p>
+                <p>0315 9117594</p>
             </div>
             <div class="clearfix"></div>
         </div>
@@ -1259,7 +1259,7 @@
             </div>
             <div class="footer-contact-detal">
             	<h2>Email</h2>
-                <p>info@builder&amp;contractors.com</p>
+                <p>usmanali.itian@gmail.com</p>
             </div>
             <div class="clearfix"></div>
         </div>
@@ -1302,7 +1302,7 @@
             <div class="container-fluid no-padding opning-hours-main-outer">
             	<div class="opening-hours">
                 	<div class="col-md-6 col-sm-6 col-xs-6 text-left no-padding-left">
-                    	<p>Monday-Friday</p>
+                    	<p>Monday-Sunday</p>
                     </div>
                 	<div class="col-md-6 col-sm-6 col-xs-6 text-right no-padding-right">
                     	<p>9am to 5pm</p>
