--- a/WebContent/about-us.html
+++ b/WebContent/about-us.html
@@ -298,7 +298,7 @@
             </div>
             <div class="footer-contact-detal">
             	<h2>Phone</h2>
-                <p>0203 475 7834</p>
+                <p>03159117594</p>
             </div>
             <div class="clearfix"></div>
         </div>
@@ -319,7 +319,7 @@
             </div>
             <div class="footer-contact-detal">
             	<h2>Email</h2>
-                <p>info@builder&amp;contractors.com</p>
+                <p>usmanali.itian@gmail.com</p>
             </div>
             <div class="clearfix"></div>
         </div>
