--- a/WebContent/404.html
+++ b/WebContent/404.html
@@ -120,7 +120,7 @@
 <!-- Page TItle -->
 <div class="page-title-main error-page">
 	<div class="container">
-    	<h1>404 Error</h1>
+    	<h1>Hey! Usman we found 404 Error</h1>
         <ul class="breadcrumbs-ul container">
             <li><a href="#">Home</a></li>
             <li>404 Error</li>
@@ -147,7 +147,7 @@
             </div>
             <div class="footer-contact-detal">
             	<h2>Phone</h2>
-                <p>0203 475 7834</p>
+                <p>0315 9117594</p>
             </div>
             <div class="clearfix"></div>
         </div>
@@ -168,7 +168,7 @@
             </div>
             <div class="footer-contact-detal">
             	<h2>Email</h2>
-                <p>info@builder&amp;contractors.com</p>
+                <p>usmanali.itian@gmail.com</p>
             </div>
             <div class="clearfix"></div>
         </div>
