--- a/WebContent/blogs-detail.html
+++ b/WebContent/blogs-detail.html
@@ -310,7 +310,7 @@
             </div>
             <div class="footer-contact-detal">
             	<h2>Phone</h2>
-                <p>0203 475 7834</p>
+                <p>0315 911795</p>
             </div>
             <div class="clearfix"></div>
         </div>
@@ -331,7 +331,7 @@
             </div>
             <div class="footer-contact-detal">
             	<h2>Email</h2>
-                <p>info@builder&amp;contractors.com</p>
+                <p>usmanali.itian@gmail.com</p>
             </div>
             <div class="clearfix"></div>
         </div>
