--- a/WebContent/blogs-2.html
+++ b/WebContent/blogs-2.html
@@ -441,7 +441,7 @@
             </div>
             <div class="footer-contact-detal">
             	<h2>Phone</h2>
-                <p>0203 475 7834</p>
+                <p>0315 9117594</p>
             </div>
             <div class="clearfix"></div>
         </div>
@@ -462,7 +462,7 @@
             </div>
             <div class="footer-contact-detal">
             	<h2>Email</h2>
-                <p>info@builder&amp;contractors.com</p>
+                <p>usmanali.itian@gmail.com</p>
             </div>
             <div class="clearfix"></div>
         </div>
