--- a/WebContent/services.html
+++ b/WebContent/services.html
@@ -264,7 +264,7 @@
             </div>
             <div class="footer-contact-detal">
             	<h2>Phone</h2>
-                <p>0203 475 7834</p>
+                <p>0315 9117594</p>
             </div>
             <div class="clearfix"></div>
         </div>
@@ -285,7 +285,7 @@
             </div>
             <div class="footer-contact-detal">
             	<h2>Email</h2>
-                <p>info@builder&amp;contractors.com</p>
+                <p>usmanali.itian@gmail.com</p>
             </div>
             <div class="clearfix"></div>
         </div>
