--- a/WebContent/contact-us.html
+++ b/WebContent/contact-us.html
@@ -120,7 +120,7 @@
 <!-- Page TItle -->
 <div class="page-title-main contact-us-page">
 	<div class="container">
-    	<h1>Contact Us</h1>
+    	<h1>REACH US</h1>
         <ul class="breadcrumbs-ul container">
         	<li class="first-name">You are here:</li>
             <li><a href="#">Home</a></li>
